# Dispatch

./: .editorconfig  .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
docs/: PRD.md  (+11 more)
services/api/: .env.example  README.md  pyproject.toml  requirements.txt
services/api/api/: index.py
services/api/src/dispatch_api/: __init__.py  __main__.py  app.py  auth.py  config.py  errors.py  validation.py
services/api/src/dispatch_api/clients/: __init__.py  supabase.py
services/api/src/dispatch_api/modules/: __init__.py
services/api/src/dispatch_api/modules/analytics/: __init__.py
services/api/src/dispatch_api/modules/auth/: __init__.py  routes.py
services/api/src/dispatch_api/modules/departments/: __init__.py  routes.py
services/api/src/dispatch_api/modules/feed/: __init__.py  routes.py
services/api/src/dispatch_api/modules/mesh/: __init__.py  routes.py
services/api/src/dispatch_api/modules/municipality/: __init__.py  routes.py
services/api/src/dispatch_api/modules/notifications/: __init__.py  routes.py
services/api/src/dispatch_api/modules/reports/: __init__.py  routes.py
services/api/src/dispatch_api/services/: __init__.py  analytics_service.py  assessment_service.py  department_service.py  feed_service.py  mesh_service.py  notification_service.py  offline_token_service.py  report_service.py  storage.py
services/api/src/dispatch_api/system/: events.py  routes.py
services/api/tests/: conftest.py  test_cors.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_supabase_client.py  test_system.py
(+264 files in other folders)
